[gd_scene load_steps=7 format=3 uid="uid://ke438w5ne7cw"]

[ext_resource type="Script" uid="uid://cgpkxa13hhnox" path="res://src/main.gd" id="1_3cfgd"]
[ext_resource type="PackedScene" uid="uid://bdj8t5d1w0lh5" path="res://src/common/level_manager.tscn" id="2_fyndt"]
[ext_resource type="PackedScene" uid="uid://dk3sfdk4mpkgm" path="res://src/world/levels/test_level.tscn" id="3_fyndt"]
[ext_resource type="PackedScene" uid="uid://02ojse24fbw5" path="res://src/hud/timer_display.tscn" id="5_kmhfv"]
[ext_resource type="PackedScene" uid="uid://cdm2fhla0kigd" path="res://src/common/fade_panel.tscn" id="6_kmhfv"]

[sub_resource type="Resource" id="Resource_5q4o7"]
metadata/__load_path__ = "res://src/tutorial_state.tres"

[node name="Main" type="Node2D"]
script = ExtResource("1_3cfgd")
game_state = SubResource("Resource_5q4o7")

[node name="LevelManager" parent="." node_paths=PackedStringArray("level_container") instance=ExtResource("2_fyndt")]
levels = Array[PackedScene]([ExtResource("3_fyndt")])
level_container = NodePath("../Level")

[node name="Level" type="Node2D" parent="."]

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="TimerDisplay" parent="HUDLayer" instance=ExtResource("5_kmhfv")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="FadePanel" parent="OverlayLayer" instance=ExtResource("6_kmhfv")]
unique_name_in_owner = true
visible = true
metadata/_edit_lock_ = true

[connection signal="game_completed" from="LevelManager" to="." method="_on_level_manager_game_completed"]
[connection signal="level_ready" from="LevelManager" to="." method="_on_level_manager_level_ready"]
[connection signal="level_unloaded" from="LevelManager" to="." method="_on_level_manager_level_unloaded"]
